   - IPrintable: does not say "succesfully printed" when cancelled (todo #1188).
   - OpeTemplatePage: fix row activation.
   - OpeTemplateSelect: fix missing getter.
   - OpeTemplateStore: fix row insertion (todo #1189).

 Other changes:

   - AccountSelect, OpeTemplateSelect: homogeneize UIs.
   - EntryListview, EntryStore: new classes.

-----------------------------------------------------------------------
 Version 0.59
 ============

 Released on 2016-09-01
  
 New features and improvements:

   - RecurrentOperation: DB Model v4.
   - Rename the application to Open Firm Accounting (todo #1164).
   - BatImport: add a completeness check on imported lines.
   - BatTreeview: add a Notes indicator (todo #1157).
   - BatTreeview: make the treeview sortable (todo #1167).
   - ClassPage: add a Notes indicator (todo #1157).
   - ClassPage: make the treeview sortable (todo #1167).
   - CurrencyPage: add a Notes indicator (todo #1157).
   - CurrencyPage: make the treeview sortable (todo #1167).
   - LedgerPage: add a Notes indicator (todo #1157).
   - LedgerCombo: sort on lefmost column.
   - LedgerTreeview: make the treeview sortable (todo #1167).
   - OpeTemplateFrame: add a Notes indicator (todo #1157).
   - RecurrentManagePage: add a Notes indicator (todo #1157).
   - StreamFormat: provides a default character set list (todo #1170).
   - UserPreferences: display an error message if needed.
   - VATManagePage: add a Notes indicator (todo #1157).

 Bug fixes:

   - ImporterPdfBoursorama: fix import when more than one page (todo #1173).
   - GuidedInput: take into account the user set ledger (todo #1152).
   - RecurrentManagePage: remove extraneous button spacer.
   - RecurrentRun: fix validation status recording (todo #1176).
   - SettlementPage: fix column header (todo #1148).
   - Style: fix selector change introduced with Gtk 3.20 (todo #1171).

 Other changes:

   - myStyle: new style management class.
   - ofa.css: remove obsolete styles.