@@ -52,6 +52,7 @@
 
    - AccountSelect, OpeTemplateSelect: homogeneize UIs.
    - EntryListview, EntryStore: new classes.
+   - myIActionMap, myAccelGroup: simplify code and review interface.
 
 -----------------------------------------------------------------------
  Version 0.59
